<resources>
    <string name="app_name">Medicine Tracker</string>
    <string name="current">Current</string>
    <string name="past">Past</string>
    <string name="add_a_prescription_to_see_it_here">Add a prescription to see it here</string>
    <string name="used_medications_will_show_up_here">Past prescriptions will show here</string>
    <string name="not_entered">Not entered</string>
    <string name="no_date_entered">No Date Entered</string>
    <string name="refills">Refills</string>
    <string name="prescription_qty">Prescription QTY</string>
    <string name="dosage">Dosage</string>
    <string name="date_filled">Date Filled</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="please_enter_new_prescription_information_here">Please enter new prescription information here:</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="empty_date">00/00/0000</string>
    <string name="phone">Phone #</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="hospital_clinic">Hospital/Clinic</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="please_enter_your_doctor_information">Please enter your doctor information:</string>
    <string name="refill_qty">Refill QTY</string>
    <string name="doctor">Doctor</string>
    <string name="add_new">Add New</string>
    <string name="pharmacy_phone">Pharmacy Phone #</string>
    <string name="pharmacy_state">Pharmacy State</string>
    <string name="please_enter_pharmacy_information_here">Please enter pharmacy information here:</string>
    <string name="please_enter_your_pharmacy_information">Please enter your pharmacy information:</string>
    <string name="pharmacy_name">Pharmacy Name</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="doctors_will_show_up_here">Doctors will show up here</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="pharmacies_will_show_up_here">Pharmacies will show up here</string>
    <string name="required">Required</string>
    <string name="main_name">Main Name</string>
    <string name="left">Left</string>
    <string name="pins_do_not_match">Pins do not match</string>
    <string name="set_up">Set Up</string>
    <string name="wrong_pin">Wrong Pin</string>
    <string name="login">Login</string>
</resources>
